Added ignores for more warnings: shap and UserWarning

--- a/Capstone_Group_12_v2.ipynb
+++ b/Capstone_Group_12_v2.ipynb
@@ -111,12 +111,14 @@
       "source": [
         "# removing warnings for a cleaner markdown output\n",
         "warnings.filterwarnings('ignore', category=FutureWarning)\n",
-        "warnings.filterwarnings('ignore', category=pd.errors.SettingWithCopyWarning)"
+        "warnings.filterwarnings('ignore', category=pd.errors.SettingWithCopyWarning)\n",
+        "warnings.filterwarnings('ignore', category=UserWarning)\n",
+        "warnings.filterwarnings('ignore', module='shap')"
       ],
       "metadata": {
         "id": "4VjKec6pZ6n5"
       },
-      "execution_count": 3,
+      "execution_count": 41,
       "outputs": []
     },
     {
